<resources>
    <string name="app_name">STUANT</string>
    <string name="abc_international_school">ABC INTERNATIONAL SCHOOL</string>
    <string name="welcome">WELCOME</string>
    <string name="e_mail">Email ID</string>
    <string name="password">Password</string>
    <string name="log_in">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user_sign_up">Sign-UP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="user_details">USER DETAILS</string>
    <string name="name">Name</string>
    <string name="register_number">Roll Num</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="standard">Standard</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="send_recovery_mail">Send Recovery Mail</string>
    <string name="done">Done....</string>
    <string name="failed">Failed!!!</string>
    <string name="class_subject_id" />
    <string name="program_list">Program List</string>
    <string name="stage">Stage</string>
    <string name="faculty">Faculty</string>
    <string name="program_master">Program Master</string>
    <string name="program_id">Program ID</string>
    <string name="program_code">Program Code</string>
    <string name="program_type">Program Type</string>
    <string name="program_name">Program Name</string>
    <string name="program_details">Program Details</string>
    <string name="created_by">Created By</string>
    <string name="last_updated_date">Last Updated Date</string>
    <string name="save">Save</string>
    <string name="program_schedule">Program Schedule</string>
    <string name="class_id">Class ID</string>
    <string name="subject_id">Subject ID</string>
    <string name="day">Day</string>
    <string name="duration">Duration</string>
    <string name="class_list">Class List</string>
    <string name="class_name">Class Name</string>
    <string name="fees">Fees</string>
    <string name="class_strength">Class Strength</string>
    <string name="class_master">Class Master</string>
    <string name="subject_master">Subject Master</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_name">Subject Name</string>
    <string name="class_subject">Class Subject</string>
    <string name="program_registration">Program Registration</string>
    <string name="feedback">FEEDBACK</string>
    <string name="give_your_feedback">Give your Feedback</string>
    <string name="field_is_empty_please_enter_details">Field is EMPTY!!! Please Enter Details..</string>
    <string name="details_saved_successfully">Details Saved Successfully</string>
    <string name="home">HOME</string>
    <string name="log_out">LOG OUT</string>
    <string name="time_rable">TIME RABLE</string>
    <string name="monday">Mon day</string>
    <string name="tuesday">Tue day</string>
    <string name="wednesday">Wed day</string>
    <string name="thursday">Thu Day</string>
    <string name="fri_day">FRi day</string>
    <string name="satur_day">Sat day</string>
    <string name="sun_day">Sun day</string>
    <string name="no_of_attempts_left_5">No of Attempts Left = 5</string>
    <string name="_9_15_10_00">09.15AM-10.00AM</string>
    <string name="_10_00_10_45">10.00AM-10.45AM</string>
    <string name="_10_45am_11_00am">10.45AM-11.00AM</string>
    <string name="_11_00am_11_45am">11.00AM-11.45AM</string>
    <string name="_11_45am_12_30pm">11.45AM-12.30PM</string>
    <string name="_12_30pm_1_15pm">12.30PM-01.15PM</string>
    <string name="_01_15pm_02_00pm">01.15PM-02.00PM</string>
    <string name="_02_00pm_02_45pm">02.00PM-02.45PM</string>
    <string name="_02_45pm_03_00pm">02.45PM-03.00PM</string>
    <string name="_03_00pm_03_45pm">03.00PM-03.45PM</string>
    <string name="_03_45pm_04_30pm">03.45PM-04.30PM</string>
    <string name="subject_1">TAMIL</string>
    <string name="subject_2">ENGLISH</string>
    <string name="morning_break">MORNING BREAK</string>
    <string name="subject_3">MATHEMATICS</string>
    <string name="subject_4">PHYSICS</string>
    <string name="lunch_break">LUNCH BREAK</string>
    <string name="subject_5">CHEMISTRY</string>
    <string name="subject_6">BIOLOGY</string>
    <string name="evening_break">EVENING BREAK</string>
    <string name="extra_curricular">HINDI</string>
    <string name="games">GAMES</string>
    <string name="sports_day">SPORTS DAY</string>
    <string name="stuant_app">STUANT APP</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="previous">Previous</string>
    <string name="organised_by">Organised By</string>
    <string name="last_date_to_apply">Last Date to Apply</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="activity">Activity</string>
    <string name="number_of_students">Number of Students</string>
    <string name="team_name">Team Name</string>
    <string name="activity_details">Activity Details</string>
    <string name="date_of_applying">Date of Applying</string>
    <string name="program_date">Program Date</string>
    <string name="submit">Submit</string>
    <string name="yes_all_details_are_correct_and_i_m_agree">Yes, All details are CORRECT and I\'m AGREE</string>
    <string name="submit_preview"><![CDATA[Submit & Preview]]></string>
    <string name="view">View</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="extra_activities">Extra Activities</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trans">Transgender</string>
    <string name="pleasse_ensure_htose_details_before_click_on_register_this_cannot_be_edited_again">Pleasse Ensure those details Before Click on REGISTER.... This Cannot be Edited Again</string>
    <string name="edit">Edit</string>
    <string name="warning_if_you_want_to_edit_you_have_to_signup_again_by_entering_all_details">WARNING!!!… If you want to Edit you Have to SIGNUP again by Entering All details.</string>
    <string name="my_profile">My Profile</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="student_login">Student Login</string>
    <string name="login_id">LogIN ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_registration">Date Of Registration</string>
    <string name="roll_number">Roll Number</string>
    <string name="school_fee">School Fee</string>
    <string name="paid">Paid</string>
    <string name="fee_pending">Fee Pending</string>
    <string name="due_date">Due Date</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="add">Add</string>
    <string name="delete">delete</string>
    <string name="subject1">Subject1</string>
    <string name="subject2">Subject2</string>
    <string name="subject3">Subject3</string>
    <string name="total">TOTAL</string>
    <string name="percentage">PERCENTAGE</string>
    <string name="term">Term</string>
    <string name="grade">GRADE</string>
    <string name="recommendation">Recommendation</string>
    <string name="attendance">Attendance</string>
    <string name="student_activity">Student Activity</string>
    <string name="send">SEND</string>
    <string name="first_hour">First Hour</string>
</resources>
