<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPage.StudentReg">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/etSRName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        />
    <EditText
        android:id="@+id/etSRRollNO"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etSRName"
        android:hint="@string/register_number"
        android:maxLines="1"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/etSRClass"
        android:layout_width="200dp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_below="@id/etSRGender"
        android:hint="@string/class_name"/>
    <EditText
        android:id="@+id/etSRDate"
        android:inputType="date"
        android:maxLines="1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etSRClass"
        android:hint="@string/date_of_registration"
        />
    <EditText
        android:id="@+id/etSRPhnNo"
        android:layout_width="200dp"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etSREmail"
        android:hint="@string/phone_number"
        />
    <EditText
        android:id="@+id/etSREmail"
        android:layout_width="200dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etSRDate"
        android:hint="@string/e_mail"
        />
    <EditText
        android:id="@+id/etSRGender"
        android:layout_width="200dp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etSRRollNO"
        android:hint="@string/gender"
        />
    <EditText
        android:id="@+id/etSRAddress"
        android:layout_width="200dp"
        android:inputType="textPostalAddress"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/etSRPhnNo"
        android:hint="@string/address"
        />
    <Button
        android:id="@+id/btnSRSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSRAddress"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_marginTop="25dp"
        android:background="@color/light_green"
        />
</RelativeLayout>
</ScrollView>