<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.StudentDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cvProfilePic"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/btnChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:backgroundTint="@color/light_green"
            tools:targetApi="lollipop"
            />
        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textStyle="bold"
            android:layout_toRightOf="@id/cvProfilePic"
            android:layout_margin="20dp"
            android:backgroundTint="@color/light_green"
            tools:targetApi="lollipop"
            android:layout_toEndOf="@id/cvProfilePic" />

    <TextView
        android:id="@+id/tvSignupName"
        style="@style/myTextViewStu"
        android:text="@string/name"
        android:layout_below="@id/cvProfilePic"
        />
    <TextView
        android:id="@+id/tvSignupRegNo"
        style="@style/myTextViewStu"
        android:text="@string/register_number"
        android:layout_below="@id/tvSignupName"
        />
    <TextView
        android:id="@+id/tvSignupDOB"
        style="@style/myTextViewStu"
        android:text="@string/dob"
        android:layout_below="@id/tvSignupRegNo"
        />

    <TextView
        android:id="@+id/tvSignupGender"
        style="@style/myTextViewStu"
        android:text="@string/gender"
        android:layout_below="@id/tvSignupDOB"
        />
    <TextView
        android:id="@+id/tvSignupClass"
        style="@style/myTextViewStu"
        android:text="@string/standard"
        android:layout_below="@id/tvSignupGender"
        />

    <TextView
        android:id="@+id/tvSignupFather"
        style="@style/myTextViewStu"
        android:text="@string/father_name"
        android:layout_below="@id/tvSignupClass"
        />

    <TextView
        android:id="@+id/tvSignupMother"
        style="@style/myTextViewStu"
        android:text="@string/mother_name"
        android:layout_below="@id/tvSignupFather"
        />

    <TextView
        android:id="@+id/tvSignupBlood"
        style="@style/myTextViewStu"
        android:text="@string/blood_group"
        android:layout_below="@id/tvSignupMother"
        />

    <TextView
        android:id="@+id/tvSignupAddress"
        style="@style/myTextViewStu"
        android:text="@string/address"
        android:layout_below="@id/tvSignupExtra"
        />

    <TextView
        android:id="@+id/tvSignupExtra"
        style="@style/myTextViewStu"
        android:text="@string/extra_activities"
        android:layout_below="@id/tvSignupBlood"
        />

    <TextView
        android:id="@+id/tvSignupEmail"
        style="@style/myTextViewStu"
        android:text="@string/email"
        android:layout_below="@id/tvAddress"
        />

    <TextView
        android:id="@+id/tvName"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupName"
        android:layout_toEndOf="@id/tvSignupName"
        android:layout_alignBottom="@id/tvSignupName"
        />
    <TextView
        android:id="@+id/tvRollNUm"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupRegNo"
        android:layout_toEndOf="@id/tvSignupRegNo"
        android:layout_alignBottom="@id/tvSignupRegNo"
        />
    <TextView
        android:id="@+id/tvDOB"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupDOB"
        android:layout_toEndOf="@id/tvSignupDOB"
        android:layout_alignBottom="@id/tvSignupDOB"
        />
    <TextView
        android:id="@+id/tvGen"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupGender"
        android:layout_toEndOf="@id/tvSignupGender"
        android:layout_alignBottom="@id/tvSignupGender"
        />
    <TextView
        android:id="@+id/tvStandard"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupClass"
        android:layout_toEndOf="@id/tvSignupClass"
        android:layout_alignBottom="@id/tvSignupClass"
        />
    <TextView
        android:id="@+id/tvFather"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupFather"
        android:layout_toEndOf="@id/tvSignupFather"
        android:layout_alignBottom="@id/tvSignupFather"
        />
    <TextView
        android:id="@+id/tvMonther"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupMother"
        android:layout_toEndOf="@id/tvSignupMother"
        android:layout_alignBottom="@id/tvSignupMother"
        />
    <TextView
        android:id="@+id/tvBlood"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupBlood"
        android:layout_toEndOf="@id/tvSignupBlood"
        android:layout_alignBottom="@id/tvSignupBlood"
        />
    <TextView
        android:id="@+id/tvExtra"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupExtra"
        android:layout_toEndOf="@id/tvSignupExtra"
        android:layout_alignBottom="@id/tvSignupExtra"
        />
    <TextView
        android:id="@+id/tvAddress"
        android:layout_height="100dp"
        android:layout_width="200dp"
        android:layout_below="@id/tvExtra"
        android:layout_toRightOf="@id/tvSignupAddress"
        android:layout_toEndOf="@id/tvSignupAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:background="@drawable/rectangle_border_tranparent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/myTextViewStuET"
        android:layout_toRightOf="@id/tvSignupEmail"
        android:layout_toEndOf="@id/tvSignupEmail"
        android:layout_alignBottom="@id/tvSignupEmail"
        />

    </RelativeLayout>
</ScrollView>