<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink_Byjus"
    tools:context=".StudentLogIN.SignUp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/tvSignupName"
        style="@style/myTextView"
        android:text="@string/name"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/tvSignupRegNo"
        style="@style/myTextView"
        android:text="@string/register_number"
        android:layout_below="@id/tvSignupName"
        />
    <TextView
        android:id="@+id/tvSignupDOB"
        style="@style/myTextView"
        android:text="@string/dob"
        android:layout_below="@id/tvSignupRegNo"
        />

    <TextView
        android:id="@+id/tvSignupGender"
        style="@style/myTextView"
        android:text="@string/gender"
        android:layout_below="@id/tvSignupDOB"
        />
    <TextView
        android:id="@+id/tvSignupClass"
        style="@style/myTextView"
        android:text="@string/standard"
        android:layout_below="@id/spnSignUPGender"
        />

    <TextView
        android:id="@+id/tvSignupFather"
        style="@style/myTextView"
        android:text="@string/father_name"
        android:layout_below="@id/tvSignupClass"
        />

    <TextView
        android:id="@+id/tvSignupMother"
        style="@style/myTextView"
        android:text="@string/mother_name"
        android:layout_below="@id/tvSignupFather"
        />

    <TextView
        android:id="@+id/tvSignupBlood"
        style="@style/myTextView"
        android:text="@string/blood_group"
        android:layout_below="@id/tvSignupMother"
        />

    <TextView
        android:id="@+id/tvSignupAddress"
        style="@style/myTextView"
        android:text="@string/address"
        android:layout_below="@id/tvSignupExtra"
        />

    <TextView
        android:id="@+id/tvSignupExtra"
        style="@style/myTextView"
        android:text="@string/extra_activities"
        android:layout_below="@id/tvSignupBlood"
        />

    <TextView
        android:id="@+id/tvSignupEmail"
        style="@style/myTextView"
        android:text="@string/email"
        android:layout_below="@id/etSignupAddress"
        />
    <TextView
        android:id="@+id/tvSignupPassword"
        style="@style/myTextView"
        android:text="@string/password"
        android:layout_below="@id/tvSignupEmail"
        />

    <EditText
        android:id="@+id/etSignupName"
        style="@style/myEditText"
        android:layout_toRightOf="@id/tvSignupName"
        android:layout_toEndOf="@id/tvSignupName"
        android:inputType="textPersonName"
        android:layout_alignBottom="@id/tvSignupName"
        />
    <EditText
        android:id="@+id/etSignupRollNUm"
        style="@style/myEditText"
        android:layout_toRightOf="@id/tvSignupRegNo"
        android:inputType="number"
        android:layout_toEndOf="@id/tvSignupRegNo"
        android:layout_alignBottom="@id/tvSignupRegNo"
        />
    <EditText
        android:id="@+id/etSignupDOB"
        style="@style/myEditText"
        android:layout_toRightOf="@id/tvSignupDOB"
        android:layout_toEndOf="@id/tvSignupDOB"
        android:inputType="date"
        android:layout_alignBottom="@id/tvSignupDOB"
        />
    <Spinner
        android:id="@+id/spnSignUPStd"
        android:layout_height="40dp"
        android:layout_width="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_green"
        android:inputType="text"
        android:layout_below="@id/spnSignUPGender"
        android:layout_toRightOf="@id/tvSignupClass"
        android:layout_toEndOf="@id/tvSignupClass"
        android:layout_alignBottom="@id/tvSignupClass"
        android:layout_marginStart="20dp" />
    <EditText
        android:id="@+id/etSignupFather"
        style="@style/myEditText"
        android:inputType="text"
        android:layout_toRightOf="@id/tvSignupFather"
        android:layout_toEndOf="@id/tvSignupFather"
        android:layout_alignBottom="@id/tvSignupFather"
        />
    <EditText
        android:id="@+id/etSignupMonther"
        style="@style/myEditText"
        android:inputType="text"
        android:layout_toRightOf="@id/tvSignupMother"
        android:layout_toEndOf="@id/tvSignupMother"
        android:layout_alignBottom="@id/tvSignupMother"
        />
    <EditText
        android:id="@+id/etSignupBlood"
        style="@style/myEditText"
        android:inputType="text"
        android:layout_toRightOf="@id/tvSignupBlood"
        android:layout_toEndOf="@id/tvSignupBlood"
        android:layout_alignBottom="@id/tvSignupBlood"
        />
    <EditText
        android:id="@+id/etSignupExtra"
        style="@style/myEditText"
        android:inputType="text"
        android:layout_toRightOf="@id/tvSignupExtra"
        android:layout_toEndOf="@id/tvSignupExtra"
        android:layout_alignBottom="@id/tvSignupExtra"
        />
    <EditText
        android:id="@+id/etSignupAddress"
        style="@style/myEditText"
        android:inputType="textMultiLine"
        android:layout_toRightOf="@id/tvSignupAddress"
        android:layout_toEndOf="@id/tvSignupAddress"
        android:layout_below="@id/tvSignupAddress"
        />

    <EditText
        android:id="@+id/etSignupEmail"
        style="@style/myEditText"
        android:inputType="textEmailAddress"
        android:layout_toRightOf="@id/tvSignupEmail"
        android:layout_toEndOf="@id/tvSignupEmail"
        android:layout_alignBottom="@id/tvSignupEmail"
        />
    <EditText
        android:id="@+id/etSignuopPassword"
        style="@style/myEditText"
        android:inputType="textWebPassword"
        android:layout_toRightOf="@id/tvSignupPassword"
        android:layout_toEndOf="@id/tvSignupPassword"
        android:layout_alignBottom="@id/tvSignupPassword"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_below="@id/cbSignup"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_curved_transparent"
        android:textStyle="bold"
        android:textSize="17sp"
        android:enabled="false"
        android:backgroundTint="@color/light_green"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tvAlreadyReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/btnRegister"
        android:layout_marginBottom="-60dp"
        android:onClick="toLoginActivity"
        android:text="@string/already_registered"
        android:padding="10dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@color/light_yellow"
        />
    <Spinner
        android:id="@+id/spnSignUPGender"
        android:layout_height="40dp"
        android:layout_width="200dp"
        android:background="@color/light_Ash"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/etSignupDOB"
        android:inputType="text"
        android:layout_toRightOf="@id/tvSignupGender"
        android:layout_alignBottom="@id/tvSignupGender"
        android:layout_toEndOf="@id/tvSignupGender"
        android:layout_marginStart="20dp" />


    <CheckBox
        android:id="@+id/cbSignup"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/pleasse_ensure_htose_details_before_click_on_register_this_cannot_be_edited_again"
        android:layout_below="@id/tvSignupPassword"
        />



</RelativeLayout>
</ScrollView>