<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPage.BillingDeatils">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etBDName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etBDRollNo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/roll_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etBDName"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etBDClass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/class_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etBDRollNo"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etBDTotalFee"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/school_fee"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etBDClass"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etBDPaid"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/paid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etBDTotalFee"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etBDBalance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/fee_pending"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etBDPaid"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etBDDueDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/due_date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/etBDBalance"
            android:inputType="date"
            android:maxLines="1"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/btnBDSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:layout_below="@id/etBDDueDate"
            android:layout_marginTop="20dp"
            android:background="@color/light_green"
            />

    </RelativeLayout>
</ScrollView>