<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.AddNotes">
    <EditText
        android:id="@+id/etAddNotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/etNotesAddSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:inputType="textMultiLine"
        android:layout_below="@id/etAddNotesTitle"
        />
    <Button
        android:id="@+id/btnAddNotesAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@id/etNotesAddSubject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@color/light_green"
        />
    <Button
        android:id="@+id/btnAddNotesDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddNotesAdd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        android:visibility="gone"
        android:background="@color/light_green"
        />

</RelativeLayout>